Colab을 통해 생성됨

--- a/AE_01.ipynb
+++ b/AE_01.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyN/3his06rrfQ6o8IQNHtCP",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,8 +19,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rosie-ing/Intelligent-Software/blob/main/AE_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "V7ypJe8_V8lC"
       },
@@ -72,7 +84,7 @@
       "metadata": {
         "id": "y7gu8DQaWe2T"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +117,7 @@
       "metadata": {
         "id": "UCY3mfzvXspB"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +132,7 @@
       "metadata": {
         "id": "7xHsgj3hYPAC"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +146,7 @@
       "metadata": {
         "id": "DvsdvYawarqO"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +166,7 @@
       "metadata": {
         "id": "VPufLGmPZC05"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,7 +190,7 @@
         "id": "bNnow62pZrkm",
         "outputId": "d1d051b1-9525-44c3-9ab6-d9ec67ac3d6d"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,7 +221,7 @@
         "id": "YKC5wc01cGsH",
         "outputId": "bf7f49a5-7fd1-4eec-b216-74246bd9640a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,7 +356,7 @@
         "id": "VnIIxJLdclwU",
         "outputId": "0d58507b-f07f-4de8-a834-9c1a5f439ebd"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,7 +396,7 @@
         "id": "E2UdV2oSfDed",
         "outputId": "6482a417-4e43-4124-adf8-847f5509e7a2"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
